overflow problem and form labels fixed

--- a/index.css
+++ b/index.css
@@ -10,9 +10,6 @@ body{
 h1, h2, h3{
     font-family: 'Lora', serif;
 }
-.project-image{
-    width: 100%;
-}
 ul{
     list-style: none;
     padding: 0;
@@ -38,7 +35,6 @@ F1F4F3 (whiteish)
 */
 
 /* phone */
-@media only screen and (min-width: 320px) {
     nav{
         display: none;
     }
@@ -50,13 +46,13 @@ F1F4F3 (whiteish)
     .welcome-section{
         background: linear-gradient(180deg, #00d2ff 0%, #3a47d5 100%);
         width: 100%;
-        height: 100vh;
+        min-height: 100vh;
+        height: auto;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         text-align: center;
         padding: 50px 10%;
-        overflow: hidden;
     }
     .title{
         margin: 0;
@@ -92,6 +88,9 @@ F1F4F3 (whiteish)
     .icon{
         fill:#1E8BEA;
     }
+    .project-image{
+        width: 100%;
+    }
     .project-desc{
         margin: 0;
         padding: 10px 8px 5px;
@@ -123,8 +122,8 @@ F1F4F3 (whiteish)
 
     .contact-section{
         background-color: #3a4e78;
-        height: calc(100vh - 120px);
-        /* overflow: auto; */
+        min-height: calc(100vh - 120px); 
+        height: auto;
         padding: 10% 0;
         position: relative;
     }
@@ -184,7 +183,6 @@ F1F4F3 (whiteish)
     .social-icon:hover{
         fill:#88BED4;
     }
-  }
 
   /*tablet portrait*/
   @media only screen and (min-width: 600px) {
@@ -203,7 +201,9 @@ F1F4F3 (whiteish)
         z-index: 1;
     }
     .welcome-section{
-        height: calc(100vh - 50px);
+        /* height: calc(100vh - 50px); */
+        height:auto;
+        min-height: calc(100vh - 50px);
     }
     .links{
         display: flex;
@@ -258,7 +258,8 @@ F1F4F3 (whiteish)
         font-size: 18px;
     }
     .contact-section{
-        height: calc(100vh - 193px);
+        height:auto;
+        min-height: calc(100vh - 193px);
         padding-top: 5%;
     }
     .contact-form{
@@ -266,7 +267,7 @@ F1F4F3 (whiteish)
         margin: 50px 40px 0;
         padding-bottom: 20px;
     }
-    .contact-form section{ 
+    .contact-form div{ 
         font-size: 16px;
     }
     .contact-name{
@@ -311,7 +312,8 @@ F1F4F3 (whiteish)
         height: 100vh;
     }
     .welcome-section{
-        height: 100vh
+        min-height: 100vh;
+        height: auto;
     }
     .links{
         flex-direction: column;
@@ -324,7 +326,8 @@ F1F4F3 (whiteish)
         width: 120%;
     }
     .contact-section{
-        height: calc(100vh - 143px);
+        min-height: calc(100vh - 143px);
+        height: auto;
     }
     .contact-form{
         width: 80%;
